--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=452fff63185737c01301f0602702af00
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,5 +30,5 @@ APP_SECRET=452fff63185737c01301f0602702af00
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root@127.0.0.1:3306/pidev?serverVersion=5.7&charset=utf8mb4"
-#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
