final updates (adding sms bundle, calender api,paginator customized,like metier d'un evenement)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     events_directory: '%kernel.project_dir%/public/uploads/events'
+    twilio_sid: ACb3d0e0eced06ffd7beec5ff336b6b389
+    twilio_token: 97e5f08e9366f924058e818337714fa9
+    twilio_number: '+15038324523'
 
 services:
     # default configuration for services in *this* file
